--- a/covid_mapping.html
+++ b/covid_mapping.html
@@ -114,7 +114,9 @@
 					</div>
 
 					<p><a href="https://medium.com/@jonathan.dickins90/univariate-and-bivariate-mapping-of-coronavirus-in-england-1fab3a4bb2d0" class="btn btn-primary">Read more</a></p>
-				</div>
+				<p><a href="https://github.com/jonathan-dickins/uk-covid19" class="btn btn-primary">View code</a></p>
+
+					</div>
 			</div>
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
