--- a/covid_mapping.html
+++ b/covid_mapping.html
@@ -3,11 +3,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Shift &mdash; Free Website Template, Free HTML5 Template by FreeHTML5.co</title>
+	<title>Jonathan Dickins &mdash; Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FreeHTML5.co" />
+	<meta name="description" content="Jonathan Dickins data analysis, visualisation, data science portfolio" />
+	<meta name="keywords" content="data, analysis, data science, Jonathan Dickins, R, ggplot, dataviz, visualisation" />
+	<meta name="author" content="JD" />
 
 	<!-- 
 	//////////////////////////////////////////////////////
@@ -65,29 +65,7 @@
 			<div class="fh5co-top-logo">
 				<div id="fh5co-logo"><a href="index.html">Shift</a></div>
 			</div>
-			<div class="fh5co-top-menu menu-1 text-center">
-				<ul>
-					<li><a href="work.html">Work</a></li>
-					<li><a href="about.html">Profile</a></li>
-					<li class="has-dropdown">
-						<a href="#">Dropdown</a>
-						<ul class="dropdown">
-							<li><a href="#">Web Design</a></li>
-							<li><a href="#">eCommerce</a></li>
-							<li><a href="#">Branding</a></li>
-							<li><a href="#">API</a></li>
-						</ul>
-					</li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</div>
-			<div class="fh5co-top-social menu-1 text-right">
-				<ul class="fh5co-social">
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="#"><i class="icon-dribbble"></i></a></li>
-					<li><a href="#"><i class="icon-github"></i></a></li>
-				</ul>
-			</div>
+
 		</div>
 	</nav>
 	
@@ -151,13 +129,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 
-					
-					<ul class="fh5co-social-icons">
-						<li><a href="#"><i class="icon-twitter"></i></a></li>
-						<li><a href="#"><i class="icon-facebook"></i></a></li>
-						<li><a href="#"><i class="icon-linkedin"></i></a></li>
-						<li><a href="#"><i class="icon-dribbble"></i></a></li>
-					</ul>
+
 					
 				</div>
 			</div>
