--- a/covid_mapping.html
+++ b/covid_mapping.html
@@ -63,7 +63,7 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="fh5co-top-logo">
-				<div id="fh5co-logo"><a href="index.html">Shift</a></div>
+				<div id="fh5co-logo"><a href="index.html">JD</a></div>
 			</div>
 
 		</div>
@@ -112,31 +112,9 @@
 		</div>
 	</div>
 
-	<div id="fh5co-started">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Get Started</h2>
-					<p>We create beautiful themes for your site behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-					<p><a href="#" class="btn btn-primary">Let's work together</a></p>
-				</div>
-			</div>
-		</div>
-	</div>
+	
 
-	<footer id="fh5co-footer" role="contentinfo">
-		<div class="container">
-			<div class="row copyright">
-				<div class="col-md-12 text-center">
-
-
-					
-				</div>
-			</div>
-
-		</div>
-	</footer>
-	</div>
+	
 
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
